# anonymizedf

./: AnonymizEDF.spec  README.md  main.py  pyproject.toml
anonymizedf/: app.py  editor.py  fixer.py  model.py
data/: demo_edf_special_chars.edf  demo_edfplus.edf
