[tool.poetry]
name = "anonymizedf"
version = "0.0.1"
description = "A simple software to anonymize EEG recordings in EDF format."
authors = ["Matteo Dora <matteo.dora@ieee.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.23.3"
scipy = "^1.9.1"
pyEDFlib = "^0.1.30"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"
black = {version = "^22.8.0", allow-prereleases = true}
pyinstaller = "^5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
