[tool.poetry]
name = "anonymizedf"
version = "0.0.1"
description = "A simple software to anonymize EEG recordings in EDF format."
authors = ["Matteo Dora <matteo.dora@ieee.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pyEDFlib = "^0.1.30"
wxPython = "^4.2.0"
chardet = "^5.0.0"
Unidecode = "^1.3.6"
dateparser = "^1.1.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pyinstaller = "^5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
